--- a/bower.json
+++ b/bower.json
@@ -9,11 +9,13 @@
     "bootstrap-sass-official": "~3.1.1",
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
-    "angular-sanitize": ">=1.2.*"
+    "angular-sanitize": ">=1.2.*",
+    "firebase": "~1.0.15",
+    "angularfire": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
   },
-  "testPath": "test/client/spec"  
+  "testPath": "test/client/spec"
 }
