--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "firebase": "~1.0.15",
     "angularfire": "~0.7.1",
     "d3": "~3.4.8",
-    "nvd3": "~1.1.15-beta"
+    "nvd3": "~1.1.15-beta",
+    "angular-route": "~1.2.16"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
