--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,15 @@
     "angularfire": "~0.7.1",
     "d3": "~3.4.8",
     "nvd3": "~1.1.15-beta",
-    "angular-route": "~1.2.16"
+    "angular-route": "~1.2.16",
+    "firebase-simple-login": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
   },
-  "testPath": "test/client/spec"
+  "testPath": "test/client/spec",
+  "resolutions": {
+    "firebase-simple-login": "~1.3.0"
+  }
 }
